--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 extractor transformer loader api --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 extractor transformer loader api --count --max-complexity=10 --max-line-length=100 --statistics
+          flake8 snapshot_generation --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 snapshot_generation --count --max-complexity=10 --max-line-length=100 --statistics
       - name: Test with pytest
         run: |
           python -m pytest -svv test
